tests/approvals/TestCachedClangTidyExecutor.test_execute_clang_tidy_error.approved.txt
input_file: <root-dir>/sample_inputs/proj_error/src/sample_function.cpp
exit_code: 1
stdout:
<root-dir>/sample_inputs/proj_error/src/sample_function.cpp:3:26: error: use of undeclared identifier 'std' [clang-diagnostic-error]
void sample_function() { std::cout << "Test" << std::endl; }
                         ^
<root-dir>/sample_inputs/proj_error/src/sample_function.cpp:3:49: error: use of undeclared identifier 'std' [clang-diagnostic-error]
void sample_function() { std::cout << "Test" << std::endl; }
                                                ^

stderr:
2 errors generated.
Error while processing <root-dir>/sample_inputs/proj_error/src/sample_function.cpp.

